Fix spacing for standard headers

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -2,7 +2,7 @@
 
 .standard {
   font-family: open sans, "Myriad Pro", Arial, Tahoma, Sans-Serif;
-  margin: 35px 0 10px;
+  margin: 25px 0 20px;
   font-size: 23px;
   line-height: 36px;
   font-weight: lighter;
